ERILON-45 Добавить роли

--- a/public/views/user_personage_manager.html
+++ b/public/views/user_personage_manager.html
@@ -8,84 +8,87 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-cookies.js"></script>
 
 </head>
 
 <body ng-app="personageManagerApp">
-<div data-ng-include data-src="'main-menu.html'"></div>
+<div ng-controller="permissionsController">
 
-<div ng-controller="personageListController">
-    <div data-ng-include data-src="'loader.html'"></div>
-    <table class="table table-striped">
-        <tr ng-repeat="personage in personages | orderBy : 'id'">
-            <td style="vertical-align:middle; text-align: center;">
-                <a href="/views/view_personage.html?id={{personage.id}}" class="btn btn-link" role="button">
-                    {{ personage.name }}
-                </a>
-            </td>
-
-            <td style="text-align: right;">
-                <div class="dropdown">
-                    <button class="btn btn-link dropdown-toggle" type="button" data-toggle="dropdown">Ещё
-                        <span class="caret"></span></button>
-                    <ul class="dropdown-menu dropdown-menu-right">
-                        <li><a href="/views/create_personage.html?id={{personage.id}}">Продолжить создание</a></li>
-                        <li><a href="/views/edit_personage.html?id={{personage.id}}">Редактировать</a></li>
-                        <li><a href="#" ng-click="deletePersonage(personage.id)">х</a></li>
-                    </ul>
-                </div>
-            </td>
-        </tr>
-    </table>
-</div>
-
-<div class="container">
-    <h2>Добавить персонажа</h2>
-
-    <form class="form-horizontal" role="form" ng-controller="addPersonageController"
-          name="createPersonageForm">
+    <div ng-controller="personageListController">
+        <div data-ng-include data-src="'main-menu.html'"></div>
         <div data-ng-include data-src="'loader.html'"></div>
-        <div class="form-group">
-            <label class="control-label col-sm-2" for="name">Имя:</label>
+        <table class="table table-striped">
+            <tr ng-repeat="personage in personages | orderBy : 'id'">
+                <td style="vertical-align:middle; text-align: center;">
+                    <a href="/views/view_personage.html?id={{personage.id}}" class="btn btn-link" role="button">
+                        {{ personage.name }}
+                    </a>
+                </td>
 
-            <div class="col-sm-10">
-                <input type="text" ng-model="name" class="form-control" id="name" placeholder="Шмублон" required>
+                <td style="text-align: right;">
+                    <div class="dropdown">
+                        <button class="btn btn-link dropdown-toggle" type="button" data-toggle="dropdown">Ещё
+                            <span class="caret"></span></button>
+                        <ul class="dropdown-menu dropdown-menu-right">
+                            <li><a href="/views/create_personage.html?id={{personage.id}}">Продолжить создание</a></li>
+                            <li><a href="/views/edit_personage.html?id={{personage.id}}">Редактировать</a></li>
+                            <li><a href="#" ng-click="deletePersonage(personage.id)">х</a></li>
+                        </ul>
+                    </div>
+                </td>
+            </tr>
+        </table>
+    </div>
+
+    <div class="container">
+        <h2>Добавить персонажа</h2>
+
+        <form class="form-horizontal" role="form" ng-controller="addPersonageController"
+              name="createPersonageForm">
+            <div data-ng-include data-src="'loader.html'"></div>
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="name">Имя:</label>
+
+                <div class="col-sm-10">
+                    <input type="text" ng-model="name" class="form-control" id="name" placeholder="Шмублон" required>
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            <label class="control-label col-sm-2" for="race_id">Раса: </label>
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="race_id">Раса: </label>
 
-            <div class="col-sm-10">
-                <select class="form-control"
-                        ng-model="race_id" id="race_id" ng-options="race.id as race.name for race in races" required>
-                    <option style="display:none" value="">Выберите расу...</option>
-                </select>
+                <div class="col-sm-10">
+                    <select class="form-control"
+                            ng-model="race_id" id="race_id" ng-options="race.id as race.name for race in races" required>
+                        <option style="display:none" value="">Выберите расу...</option>
+                    </select>
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            <label class="control-label col-sm-2" for="experience">Очки опыта:</label>
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="experience">Очки опыта:</label>
 
-            <div class="col-sm-10">
-                <input type="number" class="form-control" id="experience" placeholder="200" ng-model="experience"
-                       min="0" required>
+                <div class="col-sm-10">
+                    <input type="number" class="form-control" id="experience" placeholder="200" ng-model="experience"
+                           min="0" required>
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default" ng-click="createPersonage()"
-                        ng-disabled="createPersonageForm.$invalid" href="">Добавить
-                </button>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-default" ng-click="createPersonage()"
+                            ng-disabled="createPersonageForm.$invalid" href="">Добавить
+                    </button>
+                </div>
             </div>
-        </div>
-    </form>
+        </form>
+    </div>
 </div>
 
 <script>
-    var app = angular.module("personageManagerApp", []);
+    var app = angular.module("personageManagerApp", ['ngCookies']);
 
     var playerId = /id=(\d+)/.exec(window.location.href)[1];
     app.controller("addPersonageController", function ($scope, $http, $window, $q) {
@@ -217,7 +220,9 @@
         });
     });
 
-    app.controller("personageListController", function ($scope, $http) {
+    app.controller("personageListController", function ($scope, $http, $cookies) {
+        $scope.playerId = playerId;
+        $cookies.putObject('playerId', playerId);
         $scope.loader = true;
         $http.get('/personagesByPlayerId/' + playerId).
         success(function (data) {
@@ -234,6 +239,7 @@
     });
 
 </script>
+<script src="permissions/permissions.js"></script>
 
 </body>
 </html>
