--- a/public/views/login/login.html
+++ b/public/views/login/login.html
@@ -1,61 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap Login Form Template</title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/form-elements.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    <!-- Favicon and touch icons -->
+    <link rel="shortcut icon" href="assets/ico/favicon.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <script src="views/login/login.js"></script>
-    <title>Войти в систему</title>
 
-    <!-- Le styles -->
-    <style type="text/css">
-        body {
-            padding-top: 40px;
-            padding-bottom: 40px;
-            background-color: #f5f5f5;
-        }
-
-        .form-signin {
-            max-width: 300px;
-            padding: 19px 29px 29px;
-            margin: 0 auto 20px;
-            background-color: #fff;
-            border: 1px solid #e5e5e5;
-             -webkit-border-radius: 5px;
-             -moz-border-radius: 5px;
-            border-radius: 5px;
-             -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-             -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-            box-shadow: 0 1px 2px rgba(0,0,0,.05);
-        }
-        .form-signin .form-signin-heading,
-        .form-signin .checkbox {
-            margin-bottom: 10px;
-        }
-        .form-signin input[type="text"],
-        .form-signin input[type="password"] {
-            font-size: 16px;
-            height: auto;
-            margin-bottom: 15px;
-            padding: 7px 9px;
-        }
-
-    </style>
 </head>
 
 <body ng-app="loginApp">
 
-<div class="container" ng-controller="loginController">
+<!-- Top content -->
+<div class="top-content" ng-controller="loginController">
 
-    <form class="form-signin" name="loginForm">
-        <h2 class="form-signin-heading">Вход в систему "Эрилон"</h2>
-        <input type="text" id="nickName" ng-model="nickName" class="input-block-level" placeholder="Имя игрока">
-        <button class="btn btn-large btn-primary" type="submit" ng-click="login()" ng-disabled="!nickName.length">Войти</button>
-    </form>
+    <div class="inner-bg">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-8 col-sm-offset-2 text">
+                    <h1><strong>Эрилон</strong></h1>
+                    <div class="description">
+                        <p>
+                            Система управления персонажами настольной ролевой игры
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-sm-offset-3 form-box">
+                    <div class="form-top">
+                        <div class="form-top-left">
+                            <h3>Войти в систему</h3>
+                            <p>Введите имя игрока для входа:</p>
+                        </div>
+                        <div class="form-top-right">
+                            <i class="fa fa-key"></i>
+                        </div>
+                    </div>
+                    <div class="form-bottom">
+                        <form role="form" class="login-form">
+                            <div class="form-group">
+                                <label class="sr-only" for="nickName">Имя игрока</label>
+                                <input type="text" name="form-username" placeholder="Имя..." class="form-username form-control" id="nickName" ng-model="nickName">
+                            </div>
+                            <!--<div class="form-group">-->
+                                <!--<label class="sr-only" for="form-password">Password</label>-->
+                                <!--<input type="password" name="form-password" placeholder="Password..." class="form-password form-control" id="form-password">-->
+                            <!--</div>-->
+                            <button type="submit" class="btn" ng-click="login()">Войти</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <!--<div class="row">-->
+                <!--<div class="col-sm-6 col-sm-offset-3 social-login">-->
+                    <!--<h3>...or login with:</h3>-->
+                    <!--<div class="social-login-buttons">-->
+                        <!--<a class="btn btn-link-1 btn-link-1-facebook" href="#">-->
+                            <!--<i class="fa fa-facebook"></i> Facebook-->
+                        <!--</a>-->
+                        <!--<a class="btn btn-link-1 btn-link-1-twitter" href="#">-->
+                            <!--<i class="fa fa-twitter"></i> Twitter-->
+                        <!--</a>-->
+                        <!--<a class="btn btn-link-1 btn-link-1-google-plus" href="#">-->
+                            <!--<i class="fa fa-google-plus"></i> Google Plus-->
+                        <!--</a>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        </div>
+    </div>
 
-</div> <!-- /container -->
+</div>
+
+
+<!-- Javascript -->
+<script src="assets/js/jquery-1.11.1.min.js"></script>
+<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="assets/js/jquery.backstretch.min.js"></script>
+<script src="assets/js/scripts.js"></script>
+
+<!--[if lt IE 10]>
+<script src="assets/js/placeholder.js"></script>
+<![endif]-->
 
 </body>
+
 </html>
