permissions and refactoring

--- a/public/views/edit_personage.html
+++ b/public/views/edit_personage.html
@@ -9,6 +9,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+    <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.0.0.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.min.js"></script>
+    <script src="/views/permissions/permissions.js"></script>
 </head>
 <body ng-app="personageApp">
 
@@ -978,9 +981,9 @@
     })(window);
 
     var personageId = /id=(\d+)/.exec(window.location.href)[1];
-    var app = angular.module("personageApp", []);
+    var app = angular.module("personageApp", ['ui.bootstrap', 'ngStorage']);
 
-    app.controller("personageController", function ($scope, $http, $q, $timeout, $window) {
+    app.controller("personageController", function ($scope, $http, $q, $timeout, $window, $sce) {
         $scope.loader = true;
         $scope.isMobile = isMobile.android.phone;
         $scope.meritAvailable = true;
@@ -1164,9 +1167,16 @@
             });
         };
 
-        $scope.showDerivativeDescription = function (derivative) {
-            jQuery('#' + derivative).modal('show');
-        };
+        $scope.hitPiercePunchDescription = $sce.trustAsHtml('<p style="font-size: large">Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа</p>');
+        $scope.hitChopPunchDescription = $sce.trustAsHtml('<p style="font-size: large">Количество кубиков на бросок попадания рубящим ударом. Равно ловкости+силе персонажа</p>');
+        $scope.rangedHitDescription = $sce.trustAsHtml('<p style="font-size: large">Количество кубиков на бросок попадания при стрельбе из луков, арбалетов и использовании метательного оружия. Равно ловкости+восприятию персонажа</p>');
+        $scope.parryPiercePunchDescription = $sce.trustAsHtml('<p style="font-size: large">Количество кубиков на парирование колющих/режущих ударов. Равно скорости+реакции персонажа</p>');
+        $scope.parryChopPunchDescription = $sce.trustAsHtml('<p style="font-size: large">Количество кубиков на парирование рубящего удара. Равно силе+реакции персонажа</p>');
+        $scope.dodgeDescription = $sce.trustAsHtml('<p style="font-size: large">Количество кубиков на уклонение от атак. Равно ловкости+реакции персонажа</p>');
+        $scope.generalActionPointsDescription = $sce.trustAsHtml('<p style="font-size: large">Количество очков выносливости персонажа. Тратится на активацию заклинаний и способностей, бег и любые действия. Равно выносливости персонажа, умноженной на 20</p>');
+        $scope.mentalActionPointsDescription = $sce.trustAsHtml('<p style="font-size: large">Количество ментальных действий, совершаемых в раунд (активация способностей). Равно интеллекту персонажа</p>');
+        $scope.endurancePointsDescription = $sce.trustAsHtml('<p style="font-size: large">Количество очков выносливости персонажа. Тратится на активацию заклинаний и способностей, бег и любые действия. Равно выносливости персонажа, умноженной на 20</p>');
+        $scope.initiativeDescription = $sce.trustAsHtml('<p style="font-size: large">Количество кубиков на определение очередности хода в раунде. Равно реакции персонажа</p>');
 
         $scope.isSpellAdded = function (id) {
             var spellAdded = false;
@@ -2243,6 +2253,7 @@
     });
 
 </script>
+<script src="permissions/check_player_permissions.js"></script>
 
 </body>
 </html>
