--- a/public/views/attached_skills/attached_skills_manager.html
+++ b/public/views/attached_skills/attached_skills_manager.html
@@ -9,9 +9,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-cookies.js"></script>
-    <script src="attached_skills_controller.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.min.js"></script>
     <script src="/views/permissions/permissions.js"></script>
+    <script src="attached_skills_controller.js"></script>
+    <script src="/views/permissions/check_player_permissions.js"></script>
 </head>
 
 <body ng-app="attachedSkillManagerApp">
