--- a/public/views/inherents/inherent_manager.html
+++ b/public/views/inherents/inherent_manager.html
@@ -9,38 +9,43 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.min.js"></script>
+    <script src="/views/permissions/permissions.js"></script>
+    <script src="inherent_manager.js"></script>
+    <script src="/views/permissions/check_player_permissions.js"></script>
 </head>
 
 <body ng-app="inherentManagerApp">
-<div data-ng-include data-src="'main-menu.html'"></div>
-<div ng-controller="inherentListController">
-    <div data-ng-include data-src="'loader.html'"></div>
+<div ng-controller="permissionsController">
+    <div data-ng-include data-src="'/views/main-menu.html'"></div>
+    <div ng-controller="inherentListController">
+        <div data-ng-include data-src="'/views/loader.html'"></div>
 
-    <div class="row">
-        <div class="col-xs-offset-1 col-xs-2">
-            <p class="lead">
-                <strong>Поиск особенности:</strong>
-            </p>
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-2">
+                <p class="lead">
+                    <strong>Поиск особенности:</strong>
+                </p>
+            </div>
+            <div class="col-xs-offset-2 col-xs-4">
+                <p class="lead"><input type="text" ng-model="search"></p>
+            </div>
         </div>
-        <div class="col-xs-offset-2 col-xs-4">
-            <p class="lead"><input type="text" ng-model="search"></p>
-        </div>
+
+        <table class="table table-striped">
+            <tr ng-repeat="inherent in inherents | orderBy : 'name' | filter : search">
+                <td style="vertical-align:middle;">{{ inherent.name }}</td>
+                <td style="vertical-align:middle;">1/{{ inherent.probability }}</td>
+                <td style="vertical-align:middle;">{{ inherent.min_limit}}</td>
+                <td style="vertical-align:middle;">{{ inherent.max_limit }}</td>
+                <td ng-show="hasDeletePermission('Inherent')">
+                    <button type="button" class="btn btn-link" ng-click="deleteInherent(inherent.id)">х</button>
+                </td>
+            </tr>
+        </table>
     </div>
 
-    <table class="table table-striped">
-        <tr ng-repeat="inherent in inherents | orderBy : 'name' | filter : search">
-            <td style="vertical-align:middle;">{{ inherent.name }}</td>
-            <td style="vertical-align:middle;">1/{{ inherent.probability }}</td>
-            <td style="vertical-align:middle;">{{ inherent.min_limit}}</td>
-            <td style="vertical-align:middle;">{{ inherent.max_limit }}</td>
-            <td>
-                <button type="button" class="btn btn-link" ng-click="deleteInherent(inherent.id)">х</button>
-            </td>
-        </tr>
-    </table>
-    </div>
-
-    <div class="container">
+    <div class="container" ng-show="hasCreatePermission('Inherent')">
         <h2>Добавить врожденную особенность</h2>
 
         <form class="form-horizontal" role="form" ng-controller="addInherentController"
@@ -119,41 +124,7 @@
             </div>
         </form>
     </div>
-
-    <script>
-        var app = angular.module("inherentManagerApp", []);
-
-        app.controller("addInherentController", function ($scope, $http) {
-            $scope.createInherent = function () {
-                $http.post('/inherents', {
-                    name: $scope.inherent_name,
-                    probability: $scope.probability,
-                    max_limit: $scope.max_limit,
-                    min_limit: $scope.min_limit,
-                    description: $scope.description,
-                    action_level_bonus: $scope.action_level_bonus
-                }).success(function (data) {
-                    location.reload();
-                });
-            };
-        });
-
-        app.controller("inherentListController", function ($scope, $http) {
-            $scope.loader = true;
-            $http.get('/inherents').
-            success(function (data) {
-                $scope.inherents = data.inherents.sort();
-                $scope.loader = false;
-            });
-
-            $scope.deleteInherent = function (id) {
-                $http.delete('/inherents/' + id).
-                success(function (data) {
-                    location.reload();
-                });
-            };
-        });
-    </script>
+</div>
 
 </body>
 </html>
