--- a/public/views/derivatives_characteristics.html
+++ b/public/views/derivatives_characteristics.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-xs-4 text-center">
-        <div style="cursor: pointer;" uib-tooltip-html="hitPiercePunchDescription">
-            <img src="/images/hitPiercePunch.png" style="vertical-align: top" width="30" height="30"/>
+        <div style="cursor: pointer;">
+            <img uib-tooltip-html="hitPiercePunchDescription" src="/images/hitPiercePunch.png" style="vertical-align: top" width="30" height="30"/>
             <span style="line-height: 1; font-size: 30px; vertical-align: top">{{hitPiercePunch}}</span>
         </div>
         <!--<div id="hitPiercePunchDescription" class="modal fade">-->
